ext {
    jacksonVersion = '2.17.1'
    bouncyCastleVersion = '1.70'
    slf4jVersion = '2.0.13'
}

allprojects {
    group = 'io.brane'
    version = '0.1.0-alpha'

    repositories {
        mavenCentral()
        maven { url "https://repo1.maven.org/maven2" }
        maven { url "https://maven-central.storage-download.googleapis.com/maven2/" }
    }
}

subprojects {
    apply plugin: 'java-library'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
        testImplementation 'org.mockito:mockito-core:5.11.0'
        testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
    }
}
